# FaltooBot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  justfile  pyproject.toml  ruff.toml
.github/workflows/: main.yml  website.yml
docs/: architecture-core.excalidraw  cli.md  guide.md
faltoobot/: __main__.py  agent.py  audio.py  binaries.py  bot.py  changelog.py  chat.py  cli.py  config.py  dev.py  doctor.py  gpt_utils.py  images.py  instructions.py  keybindings.py  memory.py  messages_rendering.py  migrate.py  migrations.py  minchat.py  notify_queue.py  openai_auth.py  openai_login.py  paste.py  repl.py  session_utils.py  sessions.py  skills.py  store.py  stream.py  submit_queue.py  tools.py  websockets.py  widgets.py
faltoobot/chat/: app.py  cli.py  entries.py  images.py  prompts.py  runtime.py  state.py  terminal.py  widgets.py
faltoobot/cli/: __init__.py  app.py  browser.py  migrations.py
faltoobot/faltoochat/: __init__.py  app.py  custom_prompts.py  diff.py  editor_utils.py  git.py  logging_config.py  messages_rendering.py  paste.py  placeholders.py  review.py  review_api.py  slash_commands.py  stream.py  submit_queue.py  terminal.py  widgets.py  xray.py
faltoobot/faltoomac/: app.py  bridge.py  cli.py
faltoobot/macchat/: bridge.py  cli.py  formatting.py
faltoobot/prompts/: coding_agent.py  sub_agent.py  transcription.py  whatsapp.py  whatsapp_group.py
faltoobot/skills/: background-notifications.md  browser-use.md  flight-search.md  google-places.md  image-generation.md  listening-response.md  memory.md  read-document.md  scheduled-subagents.md
faltoobot/whatsapp/: __init__.py  allowlist.py  app.py  audio.py  bot.py  group_approvals.py  inspect.py  login.py  runtime.py
migrations/: README.md
skills/cdp-browser-control/: SKILL.md  connect_playwright_cdp.py  launch_chrome_cdp.sh  launch_visible_cdp_rustdesk.sh  prepare_shared_chrome_for_testing.sh  probe_cdp.py  recipes.md
tests/: test_agent_instructions.py  test_agent_shell.py  test_binaries.py  test_bot.py  test_browser.py  test_changelog.py  test_chat_theme.py  test_chat_ui.py  test_cli.py  test_cli_version.py  test_custom_prompts.py  test_diff.py  test_doctor.py  test_editor_utils.py  test_faltoochat_cli.py  test_faltoochat_e2e.py  test_faltoochat_formatting.py  test_generated_image_local_ui_bdd.py  test_generated_image_streaming_bdd.py  test_git.py  test_google_places.py  test_gpt_utils.py  test_instructions.py  test_keybindings.py  test_macchat_formatting.py  test_makemigrations.py  test_message_timestamps_bdd.py  test_messages_rendering.py  test_migrate.py  test_migrations.py  test_minchat_e2e.py  test_minchat_ui.py  test_notify_queue.py  test_openai_auth.py  test_openai_login.py  test_review.py  test_review_api.py  test_review_diff.py  test_search_project.py  test_sessions.py  (+14 more)
tests/features/: generated_image_local_ui.feature  generated_image_streaming.feature  message_timestamps.feature  store_false_image_generation_replay.feature  websocket_e2e.feature  (+1 more)
website/: astro.config.mjs  package-lock.json  package.json
(+37 files in other folders)
