[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faltoobot"
version = "0.5.0"
description = "WhatsApp-first LLM bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "neonize>=0.3.15.post0",
  "openai>=2.28.0",
  "pillow>=11.3.0",
  "rich>=14.2.0",
  "textual>=8.1.1",
  'pyobjc-framework-Cocoa>=11.1; sys_platform == "darwin"',
]

[project.scripts]
faltoobot = "faltoobot.cli:main"
faltoochat = "faltoobot.chat.cli:main"
faltoomac = "faltoobot.faltoomac.cli:main"
makemigrations = "faltoobot.dev:main"

[tool.setuptools.packages.find]
include = ["faltoobot*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.6.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
