[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faltoobot"
version = "2.0.1"
description = "WhatsApp-first LLM bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "neonize>=0.3.15.post0",
  "openai>=2.28.0",
  "pillow>=11.3.0",
  "rich>=14.2.0",
  "textual[syntax]>=8.1.1",
  'pyobjc-framework-Cocoa>=11.1; sys_platform == "darwin"',
  "tree-sitter-lua>=0.5.0",
  "tree-sitter-typescript>=0.23.2",
]

[project.scripts]
faltoobot = "faltoobot.cli.app:main"
faltoochat = "faltoobot.faltoochat.app:main"

[tool.setuptools.packages.find]
include = ["faltoobot*"]

[tool.setuptools.package-data]
faltoobot = ["skills/*", "skills/**/*"]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.6.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "pytest-cov>=7.0.0",
    "ipython>=9.12.0",
]

[tool.pytest.ini_options]
addopts = "-n auto"
