[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faltoobot"
version = "2.4.0"
description = "WhatsApp-first LLM bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "neonize>=0.3.16.post0",
  "openai>=2.30.0",
  "playwright>=1.58.0",
  "pillow>=12.2.0",
  "rich>=14.3.3",
  "textual[syntax]>=8.2.3",
  'pyobjc-framework-Cocoa>=11.1; sys_platform == "darwin"',
  "tree-sitter-lua>=0.5.0",
  "tree-sitter-typescript>=0.23.2",
  "google-genai>=1.70.0",
]

[project.scripts]
faltoobot = "faltoobot.cli.app:main"
faltoochat = "faltoobot.faltoochat.app:main"

[tool.setuptools.packages.find]
include = ["faltoobot*"]

[tool.setuptools.package-data]
faltoobot = ["skills/*", "skills/**/*"]


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
    "ty>=0.0.29",
    "pytest-cov>=7.1.0",
    "ipython>=9.12.0",
]

[tool.pytest.ini_options]
addopts = "-n auto"
